ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    meta.helm.sh/release-name: signoz
    meta.helm.sh/release-namespace: platform
  finalizers:
    - ingress.k8s.aws/resources
  generation: 6
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: signoz
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: signoz
    app.kubernetes.io/version: 0.47.0
    helm.sh/chart: signoz-0.43.0
  name: signoz-frontend
  namespace: platform
spec:
  ingressClassName: alb
  rules:
    - host: yourdomain.com
      http:
        paths:
          - backend:
              service:
                name: signoz-frontend
                port:
                  number: 3301
            path: /
            pathType: Prefix
status:
